Antes de implementar sql

--- a/src/main/resources/templates/apoderado-menu.html
+++ b/src/main/resources/templates/apoderado-menu.html
@@ -42,33 +42,44 @@
 
     <div class="content" id="content">
         <div id="info1" class="info">
-            <a th:href="@{/apoderado/alumnos}">Ver Lista de Alumnos</a>
+            <a href="/apoderado/alumnos">Ver Lista de Alumnos</a>
         </div>
     </div>
 </div>
 
 <script>
-    function showInfo(infoId) {
-        var infoElements = document.getElementsByClassName('info');
-        for (var i = 0; i < infoElements.length; i++) {
-            infoElements[i].classList.remove('active');
-        }
-        document.getElementById(infoId).classList.add('active');
-    }
-
-    function listarAlumno() {
+    function cargarContenido(url) {
         var xhr = new XMLHttpRequest();
-        xhr.open('GET', '/apoderado/alumnos', true);
+        xhr.open('GET', url, true);
         xhr.onreadystatechange = function () {
             if (xhr.readyState == 4 && xhr.status == 200) {
                 document.getElementById('content').innerHTML = xhr.responseText;
+                agregarEventos();
             }
         };
         xhr.send();
     }
 
+    function listarAlumno() {
+        cargarContenido('/apoderado/alumnos');
+    }
+
+    function verAnotaciones(id) {
+        cargarContenido('/apoderado/ver-anotaciones/' + id);
+    }
+
+    function agregarEventos() {
+        document.querySelectorAll('.ver-registro-vida').forEach(function(button) {
+            button.addEventListener('click', function(event) {
+                event.preventDefault();
+                verAnotaciones(event.target.getAttribute('data-id'));
+            });
+        });
+    }
+
+
     window.onload = function() {
-        showInfo('info1');
+        listarAlumno();
     };
 
     function logout() {
