--- a/src/main/resources/templates/administrador-menu.html
+++ b/src/main/resources/templates/administrador-menu.html
@@ -20,10 +20,10 @@
             padding: 10px;
             box-sizing: border-box;
         }
-        .info {
+        .form-container {
             display: none;
         }
-        .info.active {
+        .form-container.active {
             display: block;
         }
     </style>
@@ -41,50 +41,27 @@
             <button onclick="listarApoderado()">Listar Apoderados</button>
             <button onclick="nuevoProfesor()">Contratar Profesores</button>
             <button onclick="listarProfesor()">Listar Profesores</button>
+            <button onclick="asociarAlumnoApoderado()">Asociar Alumno a Apoderado</button>
         </div>
         <button class="logout" onclick="logout()">Cerrar sesión</button>
     </div>
 
     <div class="content" id="content">
-        <div id="info1" class="info">
-            <a th:href="@{/administrador/alumnos}">Ver Lista de Alumnos</a>
-        </div>
-        <div id="info2" class="info">
-            <a th:href="@{/administrador/alumnos/nuevo}">Crear nuevo alumno</a>
-        </div>
-        <div id="info3" class="info">
-            <a th:href="@{/administrador/apoderados/nuevo}">Agregar Nuevo Apoderado</a>
-        </div>
-        <div id="info4" class="info">
-            <a th:href="@{/administrador/apoderados}">Ver Lista de Apoderados</a>
-        </div>
-        <div id="info5" class="info">
-            <a th:href="@{/administrador/profesores/nuevo}">Agregar Nuevo Profesor</a>
-        </div>
-        <div id="info6" class="info">
-            <a th:href="@{/administrador/profesores}">Ver Lista de Profesores</a>
-        </div>
     </div>
 </div>
 
 <script>
-    function showInfo(infoId) {
-        var infoElements = document.getElementsByClassName('info');
-        for (var i = 0; i < infoElements.length; i++) {
-            infoElements[i].classList.remove('active');
-        }
-        document.getElementById(infoId).classList.add('active');
-    }
-
     function listarAlumno() {
         var xhr = new XMLHttpRequest();
         xhr.open('GET', '/administrador/alumnos', true);
         xhr.onreadystatechange = function () {
             if (xhr.readyState == 4 && xhr.status == 200) {
                 document.getElementById('content').innerHTML = xhr.responseText;
+                eventoAgregarRegistroVida();
                 eventoEditarAlumno();
                 eventoVerRegistroVida();
-                eventoAgregarRegistroVida();
+                eventoEditarAnotacion();
+                eventoAgregarNota();
             }
         };
         xhr.send();
@@ -96,7 +73,7 @@
         xhr.onreadystatechange = function () {
             if (xhr.readyState == 4 && xhr.status == 200) {
                 document.getElementById('content').innerHTML = xhr.responseText;
-                eventoEditarApoderado()
+                eventoEditarApoderado();
             }
         };
         xhr.send();
@@ -108,7 +85,7 @@
         xhr.onreadystatechange = function () {
             if (xhr.readyState == 4 && xhr.status == 200) {
                 document.getElementById('content').innerHTML = xhr.responseText;
-                eventoEditarProfesor()
+                eventoEditarProfesor();
             }
         };
         xhr.send();
@@ -147,6 +124,17 @@
         xhr.send();
     }
 
+    function asociarAlumnoApoderado() {
+        var xhr = new XMLHttpRequest();
+        xhr.open('GET', '/administrador/asociar-alumno-apoderado', true);
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState == 4 && xhr.status == 200) {
+                document.getElementById('content').innerHTML = xhr.responseText;
+            }
+        };
+        xhr.send();
+    }
+
     function eventoEditarAlumno() {
         document.querySelectorAll('.editar-alumno').forEach(function(button) {
             button.addEventListener('click', function(event) {
@@ -155,6 +143,7 @@
             });
         });
     }
+
     function editarAlumno(id) {
         var xhr = new XMLHttpRequest();
         xhr.open('GET', '/administrador/editar-alumno/' + id, true);
@@ -166,102 +155,90 @@
         xhr.send();
     }
 
-
-    function agregarRegistroDeVida(id) {
+    function agregarRegistroDeVida(id, rol) {
+        var url = rol === 'ROLE_ADMIN' ? '/administrador/anotacion-alumno/' + id : '/profesor/anotacion-alumno/' + id;
         var xhr = new XMLHttpRequest();
-        xhr.open('GET', '/administrador/anotacion-alumno/' + id, true);
+        xhr.open('GET', url, true);
         xhr.onreadystatechange = function () {
             if (xhr.readyState == 4 && xhr.status == 200) {
-                document.getElementById('content').innerHTML = xhr.responseText;
-            }
-        };
-        xhr.send();
-    }
-
-
-    function verRegistroVida(id) {
-        var xhr = new XMLHttpRequest();
-        xhr.open('GET', '/administrador/ver-anotaciones/' + id, true);
-        xhr.onreadystatechange = function () {
-            if (xhr.readyState == 4 && xhr.status == 200) {
-                document.getElementById('content').innerHTML = xhr.responseText;
+                document.getElementById('content').innerHTML = '<div class="form-container active">' + xhr.responseText + '</div>';
             }
         };
         xhr.send();
     }
 
     function eventoAgregarRegistroVida() {
-        document.querySelectorAll('.agregar-registro-vida').forEach(function(button) {
+        document.querySelectorAll('.agregar-registro').forEach(function(button) {
             button.addEventListener('click', function(event) {
                 event.preventDefault();
-                agregarRegistroDeVida(event.target.getAttribute('data-id'));
+                agregarRegistroDeVida(event.target.getAttribute('data-id'), event.target.getAttribute('data-rol'));
             });
         });
+    }
+
+    function verRegistroDeVida(id) {
+        var xhr = new XMLHttpRequest();
+        xhr.open('GET', '/administrador/listar-anotaciones-alumno/' + id, true);
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState == 4 && xhr.status == 200) {
+                document.getElementById('content').innerHTML = xhr.responseText;
+            }
+        };
+        xhr.send();
     }
 
     function eventoVerRegistroVida() {
-        document.querySelectorAll('.ver-registro-vida').forEach(function(button) {
+        document.querySelectorAll('.ver-registro').forEach(function(button) {
             button.addEventListener('click', function(event) {
                 event.preventDefault();
-                verRegistroVida(event.target.getAttribute('data-id'));
+                verRegistroDeVida(event.target.getAttribute('data-id'));
             });
         });
     }
 
-    function editarAlumno(id) {
+    function editarAnotacion(id) {
         var xhr = new XMLHttpRequest();
-        xhr.open('GET', '/administrador/editar-alumno/' + id, true);
+        xhr.open('GET', '/administrador/editar-anotacion/' + id, true);
         xhr.onreadystatechange = function () {
             if (xhr.readyState == 4 && xhr.status == 200) {
-                document.getElementById('content').innerHTML = xhr.responseText;
+                document.getElementById('content').innerHTML = '<div class="form-container active">' + xhr.responseText + '</div>';
             }
         };
         xhr.send();
     }
 
-    function eventoEditarApoderado() {
-        document.querySelectorAll('.editar-apoderado').forEach(function(button) {
+    function eventoEditarAnotacion() {
+        document.querySelectorAll('.editar-anotacion').forEach(function(button) {
             button.addEventListener('click', function(event) {
                 event.preventDefault();
-                editarApoderado(event.target.getAttribute('data-id'));
+                editarAnotacion(event.target.getAttribute('data-id'));
             });
         });
-    }
-
-    function editarApoderado(id) {
-        var xhr = new XMLHttpRequest();
-        xhr.open('GET', '/administrador/editar-apoderado/' + id, true);
-        xhr.onreadystatechange = function () {
-            if (xhr.readyState == 4 && xhr.status == 200) {
-                document.getElementById('content').innerHTML = xhr.responseText;
-            }
-        };
-        xhr.send();
-    }
-
-    function eventoEditarProfesor() {
-        document.querySelectorAll('.editar-profesor').forEach(function(button) {
-            button.addEventListener('click', function(event) {
-                event.preventDefault();
-                editarProfesor(event.target.getAttribute('data-id'));
-            });
-        });
-    }
-
-    function editarProfesor(id) {
-        var xhr = new XMLHttpRequest();
-        xhr.open('GET', '/administrador/editar-profesor/' + id, true);
-        xhr.onreadystatechange = function () {
-            if (xhr.readyState == 4 && xhr.status == 200) {
-                document.getElementById('content').innerHTML = xhr.responseText;
-            }
-        };
-        xhr.send();
     }
 
     window.onload = function() {
         listarAlumno();
     };
+
+    function nuevaNota(id) {
+        var xhr = new XMLHttpRequest();
+        xhr.open('GET', '/administrador/agregar-nota/' + id, true);
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState == 4 && xhr.status == 200) {
+                document.getElementById('content').innerHTML = xhr.responseText;
+            }
+        };
+        xhr.send();
+    }
+
+    function eventoAgregarNota() {
+        document.querySelectorAll('.agregar-nota').forEach(function(button) {
+            button.addEventListener('click', function(event) {
+                event.preventDefault();
+                nuevaNota(event.target.getAttribute('data-id'));
+            });
+        });
+    }
 
     function logout() {
         alert("Sesión cerrada");
