--- a/src/main/resources/templates/nuevo-alumno.html
+++ b/src/main/resources/templates/nuevo-alumno.html
@@ -2,41 +2,45 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Nuevo Alumno</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Agregar Nuevo Alumno</h1>
-<form th:action="@{/administrador/alumnos/guardar}" th:object="${alumno}" method="post">
-    <div>
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" th:field="*{nombre}" />
-    </div>
-    <div>
-        <label for="apellidoPaterno">Apellido Paterno:</label>
-        <input type="text" id="apellidoPaterno" th:field="*{apellidoPaterno}" />
-    </div>
-    <div>
-        <label for="apellidoMaterno">Apellido Materno:</label>
-        <input type="text" id="apellidoMaterno" th:field="*{apellidoMaterno}" />
-    </div>
-    <div>
-        <label for="rut">RUT:</label>
-        <input type="text" id="rut" th:field="*{rut}" />
-    </div>
-    <div>
-        <label for="telefonoApoderado">Teléfono Apoderado:</label>
-        <input type="text" id="telefonoApoderado" th:field="*{telefonoApoderado}" />
-    </div>
-    <div>
-        <label for="direccion">Direccion:</label>
-        <input type="text" id="direccion" th:field="*{direccion}" />
-    </div>
-    <div>
-        <label for="curso">Curso:</label>
-        <input type="text" id="curso" th:field="*{curso}" />
-    </div>
-    <div>
-        <button type="submit">Guardar</button>
-    </div>
-</form>
+<div class="w-full bg-yellow-700 p-5 flex flex-col justify-between text-yellow-400 rounded">
+    <h1 class="text-2xl font-bold">Agregar Nuevo Alumno</h1>
+    <form th:action="@{/administrador/alumnos/guardar}" th:object="${alumno}" method="post">
+        <div>
+            <label class="text-xl" for="nombre">Nombre:</label>
+            <input class="text-black rounded px-1 focus:outline-none my-1" type="text" id="nombre" th:field="*{nombre}" />
+        </div>
+        <div>
+            <label class="text-xl" for="apellidoPaterno">Apellido Paterno:</label>
+            <input class="text-black rounded px-1 focus:outline-none my-1" type="text" id="apellidoPaterno" th:field="*{apellidoPaterno}" />
+        </div>
+        <div>
+            <label class="text-xl" for="apellidoMaterno">Apellido Materno:</label>
+            <input class="text-black rounded px-1 focus:outline-none my-1" type="text" id="apellidoMaterno" th:field="*{apellidoMaterno}" />
+        </div>
+        <div>
+            <label class="text-xl" for="rut">RUT:</label>
+            <input class="text-black rounded px-1 focus:outline-none my-1" type="text" id="rut" th:field="*{rut}" />
+        </div>
+        <div>
+            <label class="text-xl" for="telefonoApoderado">Teléfono Apoderado:</label>
+            <input class="text-black rounded px-1 focus:outline-none my-1" type="text" id="telefonoApoderado" th:field="*{telefonoApoderado}" />
+        </div>
+        <div>
+            <label class="text-xl" for="direccion">Direccion:</label>
+            <input class="text-black rounded px-1 focus:outline-none my-1" type="text" id="direccion" th:field="*{direccion}" />
+        </div>
+        <div>
+            <label class="text-xl" for="curso">Curso:</label>
+            <input class="text-black rounded px-1 focus:outline-none my-1" type="text" id="curso" th:field="*{curso}" />
+        </div>
+        <div>
+            <button class="py-2 px-4 my-2 bg-green-700 hover:bg-green-800 text-2xl rounded" type="submit">Guardar</button>
+        </div>
+    </form>
+</div>
+
 </body>
 </html>
