--- a/src/main/resources/templates/apoderado-menu.html
+++ b/src/main/resources/templates/apoderado-menu.html
@@ -4,45 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú del Apoderado</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
-        .palatal {
-            display: flex;
-        }
-        .menu {
-            width: 20%;
-            background-color: #008CBA;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-        .content {
-            width: 80%;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-        .info {
-            display: none;
-        }
-        .info.active {
-            display: block;
+        /* Añadir sombras personalizadas a los textos */
+        .text-shadow {
+            text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
         }
     </style>
 </head>
-<body>
-<div class="palatal">
-    <div class="menu">
-        <div class="menu-buttons">
-            <h2>Comunidad Educativa</h2>
-            <h2>KimenFen</h2>
-            <h3>Menú Apoderado</h3>
-            <button onclick="listarAlumno()">Listar Alumnos</button>
+<body class="font-sans m-0 p-0">
+<div class="flex h-screen">
+    <!-- Menu izquierda -->
+    <div class="w-64 bg-green-500 p-5 shadow-lg flex flex-col justify-between text-white">
+        <div class="menu-buttons flex-grow">
+            <h2 class="text-2xl font-bold text-shadow">Comunidad Educativa</h2>
+            <h2 class="text-xl font-semibold mt-2 text-shadow">KimenFen</h2>
+            <h3 class="text-lg font-medium mt-4 text-shadow">Menu Apoderado</h3>
+            <button onclick="listarAlumno()" class="w-full py-2 px-4 my-2 bg-green-700 hover:bg-green-800 text-white text-lg text-shadow rounded">Listar Alumnos</button>
         </div>
-        <button class="logout" onclick="logout()">Cerrar sesión</button>
+        <button class="w-full py-2 px-4 bg-red-600 hover:bg-red-700 text-white text-lg mt-4 text-shadow rounded" onclick="logout()">Cerrar sesión</button>
     </div>
 
-    <div class="content" id="content">
-        <div id="info1" class="info">
-            <a href="/apoderado/alumnos">Ver Lista de Alumnos</a>
+    <!-- Parte derecha -->
+    <div class="flex-grow p-5" id="content">
+        <div id="defecto" class="info">
+            <h2 class="text-2xl font-bold text-gray-300"> Sistema KimenFen</h2>
+            <h1 class="w-full  mb-4 text-gray-300">UCN todos los derechos reservados 2024@</h1>
         </div>
     </div>
 </div>
@@ -61,6 +48,7 @@
     }
 
     function listarAlumno() {
+        hiddenDefault();
         cargarContenido('/apoderado/alumnos');
     }
 
@@ -69,7 +57,7 @@
     }
 
     function agregarEventos() {
-        document.querySelectorAll('.ver-registro-vida').forEach(function(button) {
+        document.querySelectorAll('.ver-registro').forEach(function(button) {
             button.addEventListener('click', function(event) {
                 event.preventDefault();
                 verAnotaciones(event.target.getAttribute('data-id'));
@@ -78,9 +66,12 @@
     }
 
 
-    window.onload = function() {
-        listarAlumno();
-    };
+    function hiddenDefault() {
+        var defaultInfo = document.getElementById('defecto');
+        if (defaultInfo) {
+            defaultInfo.classList.add('hidden');
+        }
+    }
 
     function logout() {
         alert("Sesión cerrada");
