--- a/src/main/resources/templates/editar-alumno.html
+++ b/src/main/resources/templates/editar-alumno.html
@@ -2,33 +2,37 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Editar Alumno</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Editar Alumno</h1>
-<form th:action="@{/administrador/alumnos/actualizar}" th:object="${alumno}" method="post">
-    <input type="hidden" th:field="*{id}" />
-    <label for="nombre">Nombre:</label>
-    <input type="text" id="nombre" th:field="*{nombre}" /><br/>
+<div class="w-full bg-yellow-700 p-5 flex flex-col justify-between text-yellow-400 rounded">
+    <h1 class="text-2xl font-bold">Editar Alumno</h1>
+    <form th:action="@{/administrador/alumnos/actualizar}" th:object="${alumno}" method="post">
+        <input type="hidden" th:field="*{id}" />
+        <label class="text-xl" for="nombre">Nombre:</label>
+        <input class="text-black rounded px-1 focus:outline-none" type="text" id="nombre" th:field="*{nombre}" /><br/>
 
-    <label for="apellidoPaterno">Apellido Paterno:</label>
-    <input type="text" id="apellidoPaterno" th:field="*{apellidoPaterno}" /><br/>
+        <label class="text-xl" for="apellidoPaterno">Apellido Paterno:</label>
+        <input class="text-black rounded px-1 focus:outline-none" type="text" id="apellidoPaterno" th:field="*{apellidoPaterno}" /><br/>
 
-    <label for="apellidoMaterno">Apellido Materno:</label>
-    <input type="text" id="apellidoMaterno" th:field="*{apellidoMaterno}" /><br/>
+        <label class="text-xl" for="apellidoMaterno">Apellido Materno:</label>
+        <input class="text-black rounded px-1 focus:outline-none" type="text" id="apellidoMaterno" th:field="*{apellidoMaterno}" /><br/>
 
-    <label for="rut">RUT:</label>
-    <input type="text" id="rut" th:field="*{rut}" /><br/>
+        <label class="text-xl" for="rut">RUT:</label>
+        <input class="text-black rounded px-1 focus:outline-none" type="text" id="rut" th:field="*{rut}" /><br/>
 
-    <label for="telefono">Teléfono:</label>
-    <input type="text" id="telefono" th:field="*{telefonoApoderado}" /><br/>
+        <label class="text-xl" for="telefono">Teléfono:</label>
+        <input class="text-black rounded px-1 focus:outline-none" type="text" id="telefono" th:field="*{telefonoApoderado}" /><br/>
 
-    <label for="direccion">Dirección:</label>
-    <input type="text" id="direccion" th:field="*{direccion}" /><br/>
+        <label class="text-xl" for="direccion">Dirección:</label>
+        <input class="text-black rounded px-1 focus:outline-none" type="text" id="direccion" th:field="*{direccion}" /><br/>
 
-    <label for="curso">Curso:</label>
-    <input type="text" id="curso" th:field="*{curso}" /><br/>
+        <label class="text-xl" for="curso">Curso:</label>
+        <input class="text-black rounded px-1 focus:outline-none" type="text" id="curso" th:field="*{curso}" /><br/>
 
-    <button type="submit">Actualizar</button>
-</form>
+        <button class="py-2 px-4 my-2 bg-green-700 hover:bg-green-800 text-2xl rounded" type="submit">Actualizar</button>
+    </form>
+</div>
+
 </body>
 </html>
