--- a/src/main/resources/templates/lista-apoderado.html
+++ b/src/main/resources/templates/lista-apoderado.html
@@ -2,33 +2,36 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Lista de Apoderados</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Lista de Apoderados</h1>
-<table>
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-        <th>Apellido</th>
-        <th>RUT</th>
-        <th>Teléfono</th>
-        <th>Acciones</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="apoderado : ${apoderados}">
-        <td th:text="${apoderado.id}"></td>
-        <td th:text="${apoderado.nombre}"></td>
-        <td th:text="${apoderado.apellido}"></td>
-        <td th:text="${apoderado.rut}"></td>
-        <td th:text="${apoderado.telefono}"></td>
-        <td>
-            <a href="#" class="editar-apoderado" th:data-id="${apoderado.id}">Editar</a>
-            <a th:href="@{/administrador/eliminar-apoderado/{id}(id=${apoderado.id})}">Eliminar</a>
-        </td>
-    </tr>
-    </tbody>
-</table>
+<div class="w-full bg-yellow-700 p-5 flex flex-col justify-between text-yellow-400 rounded">
+    <h1 class="text-2xl font-bold">Lista de Apoderados</h1>
+    <table>
+        <thead>
+        <tr>
+            <th class="text-xl border border-black">ID</th>
+            <th class="text-xl px-1 border border-black">Nombre</th>
+            <th class="text-xl px-1 border border-black">Apellido</th>
+            <th class="text-xl px-1 border border-black">RUT</th>
+            <th class="text-xl px-1 border border-black">Teléfono</th>
+            <th class="text-xl px-1 border border-black">Acciones</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="bg-white w-full border border-black" th:each="apoderado : ${apoderados}">
+            <td class="border border-black" th:text="${apoderado.id}"></td>
+            <td class="border border-black" th:text="${apoderado.nombre}"></td>
+            <td class="border border-black" th:text="${apoderado.apellido}"></td>
+            <td class="border border-black" th:text="${apoderado.rut}"></td>
+            <td class="border border-black" th:text="${apoderado.telefono}"></td>
+            <td class="bg-yellow-800 w-full">
+                <a class="text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1 editar-apoderado" href="#" th:data-id="${apoderado.id}">Editar</a>
+                <a class="text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1" th:href="@{/administrador/eliminar-apoderado/{id}(id=${apoderado.id})}">Eliminar</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
