--- a/src/main/resources/templates/nueva-nota.html
+++ b/src/main/resources/templates/nueva-nota.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Agregar Notas a Alumno</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-<h2>Agregar Notas a Alumno</h2>
-<form th:action="@{${rol == 'ROLE_ADMIN' ? '/administrador/agregar-nota' : (rol == 'ROLE_PROFESOR' ? '/profesor/agregar-nota' : '')}}" th:object="${nota}" method="post">
-    <input type="hidden" th:field="*{alumno.id}" th:value="${nota.alumno.id}" />
-    <label>Asignatura: <input type="text" th:field="*{asignatura}" /></label><br/>
-    <label>Calificación: <input type="number" step="0.1" th:field="*{calificacion}" /></label><br/>
-    <input type="submit" value="Guardar" />
-</form>
+<div class="w-full bg-yellow-700 p-5 flex flex-col justify-between text-yellow-400 rounded">
+    <h2 class="text-2xl font-bold">Agregar Notas a Alumno</h2>
+    <form th:action="@{${rol == 'ROLE_ADMIN' ? '/administrador/agregar-nota' : (rol == 'ROLE_PROFESOR' ? '/profesor/agregar-nota' : '')}}" th:object="${nota}" method="post">
+        <input type="hidden" th:field="*{alumno.id}" th:value="${nota.alumno.id}" />
+        <label class="text-xl">Asignatura: <input class="text-black rounded px-1 focus:outline-none my-2" type="text" th:field="*{asignatura}" /></label><br/>
+        <label class="text-xl">Calificación: <input class="text-black rounded px-1 focus:outline-none" type="number" step="0.1" th:field="*{calificacion}" /></label><br/>
+        <input class="py-2 px-4 my-2 bg-green-700 hover:bg-green-800 text-2xl rounded" type="submit" value="Guardar" />
+    </form>
+</div>
+
 </body>
 </html>
